--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <p>testttttttinggggggg</p>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
